force-app/main/default/objects/Event_Vendor__c/Event_Vendor__c.object-meta.xml
<CustomObject>
    <description>Used for tracking vendors for programs and liability etc.</description>
    <label>Event Vendor</label>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>Event Vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>