force-app/main/default/objects/Event_Vendor__c/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <label>Budgeted Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>