force-app/main/default/objects/Event_Vendor__c/fields/Date_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Date_Recieved__c</fullName>
    <label>Date Recieved</label>
    <type>Date</type>
</CustomField>