force-app/main/default/objects/Event_Vendor__c/fields/Donation_Value__c.field-meta.xml
<CustomField>
    <fullName>Donation_Value__c</fullName>
    <label>Donation Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>