force-app/main/default/objects/Event_Vendor__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Vendors</relationshipLabel>
    <relationshipName>Event_Vendors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>