force-app/main/default/objects/Event_Vendor__c/fields/GIK_Recieved__c.field-meta.xml
<CustomField>
    <fullName>GIK_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GIK Recieved</label>
    <type>Checkbox</type>
</CustomField>