force-app/main/default/objects/Event_Vendor__c/fields/GIK_Reference__c.field-meta.xml
<CustomField>
    <fullName>GIK_Reference__c</fullName>
    <label>GIK Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>