force-app/main/default/objects/Event_Vendor__c/fields/GIK_Type__c.field-meta.xml
<CustomField>
    <fullName>GIK_Type__c</fullName>
    <label>GIK Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>MOU/Existing Aggreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>