force-app/main/default/objects/Event_Vendor__c/fields/Liability_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Expiry_Date__c</fullName>
    <formula>Vendor__r.Expiry_Date__c</formula>
    <label>Liability Expiry Date</label>
    <type>Date</type>
</CustomField>