force-app/main/default/objects/Event_Vendor__c/fields/Public_Liability_Amount__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability_Amount__c</fullName>
    <formula>Vendor__r.Public_Liability_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Liability Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>