force-app/main/default/objects/Event_Vendor__c/fields/Service_Provided__c.field-meta.xml
<CustomField>
    <fullName>Service_Provided__c</fullName>
    <label>Service Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Staff Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>