force-app/main/default/objects/Event_Vendor__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Vendors</relationshipLabel>
    <relationshipName>Event_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>