force-app/main/default/objects/Event_Vendor__c/fields/Vendor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Rating__c</fullName>
    <label>Vendor Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>